fix first name and title not showing on audiobar

--- a/frontend/src/components/DiscoverSlider/DiscoverSlider.css
+++ b/frontend/src/components/DiscoverSlider/DiscoverSlider.css
@@ -68,19 +68,21 @@
     width: auto;
     padding: 14px;
     margin-top: -22px;
-    color: black;
+    color: lightgray;
     font-weight: bold;
     font-size: 12px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
-    background-color: azure;
+    background-color: rgba(240 255 255 0.5);
     z-index: 51;
-    border: 1px solid lightgray;
+    border: 1px solid rgb(182, 182, 182);
 }
 
 .slide-left:hover, .slide-right:hover {
     border: 1px solid #FF5500;
+    background-color: azure;
+    color: #FF5500;
 
 }
 
