--- a/frontend/src/components/PlayListBar/PlayListBar.css
+++ b/frontend/src/components/PlayListBar/PlayListBar.css
@@ -1,17 +1,18 @@
 .playlist-menu {
     position: absolute;
-    top: -300px;
-    right: 320px;
+    top: -653px;
+    right: 315px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 175px;
-    height: 300px;
+    width: 20%;
+    height: 600px;
     background-color: #F2F2F2;
     overflow: scroll;
     border: 1px solid black;
     border-radius: 4px;
+    padding-top: 50px;
 }
 
 .playlist-titles {
